--- a/css/admin.css
+++ b/css/admin.css
@@ -106,9 +106,19 @@ td { padding: 12px; text-align:left; }
 
 .table_main { border-top: 1px solid #bab9b9; border-right: 1px solid #bab9b9; border-left: 1px solid #bab9b9;}
 
-.table_main .delete {background:url(images/x2.gif) center left no-repeat; padding-left:12px;}
+.table_main .delete {background:url(../images/x2.gif) center left no-repeat; padding-left:12px;}
 
 tr td {border-bottom: 1px solid #bab9b9;}
 
 
+
+
+/*.............................................................Extras................... */
+
+.collapsable > td > span {
+	font-weight: bolder;
+	display: block;
+	background-color: #eee;
+	padding: .5em;
+}
 
